[tool.poetry]
name = "cyrus"
version = "0.1.0"
description = "A Pokemon Showdown client written in python"
authors = ["Thaumaturigical <thaumaturgic@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
asyncio = "^3.4.3"
websockets = "^9.1"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
